--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
     "stockx-api": "^1.0.9"
   }
